--- a/webcalclient/src/main/res/layout/views.xml
+++ b/webcalclient/src/main/res/layout/views.xml
@@ -4,12 +4,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/views_list"/>
+
   <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listview"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content" 
-  android:divider="#888888"
-  android:dividerHeight="2px"
+            android:id="@+id/listview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:divider="#888888"
+            android:dividerHeight="2dp"
 
     />
 </LinearLayout>
